downgraded jps to 8. updated Konos file search